--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Header -->
     <header class="masthead">
       <div class="container">
+        <div class="divBG"></div>
         <div class="intro-text">
           <div class="intro-heading text-uppercase">Emagreça Comendo De Forma Natural</div>
           <div class="intro-lead-in">O Cardápio Low-Carb é um guia alimentar completo elaborado de acordo com os preceitos da famosa e eficaz Dieta Low-Carb. Não perca
