mudando link de afiliado

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="intro-lead-in">O Cardápio Low-Carb é um guia alimentar completo elaborado de acordo com os preceitos da famosa e eficaz Dieta Low-Carb. Não perca
              está oportunidade, clique no botão abaixo para mais informações!
           </div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/CardapioLowCarbs">Quero Saber Mais!</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/DietaLowCarbs">Quero Saber Mais!</a>
         </div>
       </div>
     </header>
