--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
       <div class="container">
         <div class="divBG"></div>
         <div class="intro-text">
-          <div class="intro-heading text-uppercase">Emagreça Comendo De Forma Natural</div>
-          <div class="intro-lead-in">O Cardápio Low-Carb é um guia alimentar completo elaborado de acordo com os preceitos da famosa e eficaz Dieta Low-Carb. Não perca
-             está oportunidade, clique no botão abaixo para mais informações!
+          <div class="intro-heading text-uppercase">Emagreça de forma natural e sem restrições!</div>
+          <div class="intro-lead-in">O Cardápio Low-Carb é um guia alimentar completo elaborado de acordo com os preceitos da famosa e eficaz Dieta Low-Carb.
           </div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/DietaLowCarbs">Quero Saber Mais!</a>
+          <div class="intro-lead-in text-uppercase">Não perca
+            tempo, só restam algumas horas para aproveitar o preço promocional de 50% de desconto!!
+         </div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/DietaLowCarbs">Vou Aproveitar!</a>
         </div>
       </div>
     </header>
