--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="intro-lead-in text-uppercase">Não perca
             tempo, só restam algumas horas para aproveitar o preço promocional de 50% de desconto!!
          </div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/DietaLowCarbs">Vou Aproveitar!</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/LowCarbsReceitas">Vou Aproveitar!</a>
         </div>
       </div>
     </header>
