--- a/index.html
+++ b/index.html
@@ -26,19 +26,29 @@
   </head>
 
   <body id="page-top">
-
+    <!-- <iframe width="1" height="1" frameborder="0" src="https://drive.google.com/open?id=1494Wj0sTQerxRB7W7ZBT3TkRKiTOUxEY"> -->
     <!-- Header -->
     <header class="masthead">
       <div class="container">
         <div class="divBG"></div>
         <div class="intro-text">
-          <div class="intro-heading text-uppercase">Emagreça de forma natural e sem restrições!</div>
+          <div class="intro-heading text-uppercase">Emagreça de forma natural, rápida e sem restrições!</div>
           <div class="intro-lead-in">O Cardápio Low-Carb é um guia alimentar completo elaborado de acordo com os preceitos da famosa e eficaz Dieta Low-Carb.
           </div>
-          <div class="intro-lead-in text-uppercase">Não perca
-            tempo, só restam algumas horas para aproveitar o preço promocional de 50% de desconto!!
+          <div class="intro-lead-in">Clique no botão abaixo e receba uma prévia, totalmente grátis, com 15 receitas low carb, e aproveite também nosso desconto
+            de 50% no nosso cardápio com 100 receitas low carb. Alem disso, você vai receber também 3 bônus e um super bônus que vai multiplicar os seus resultados com a dieta
+             Low carb.
          </div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="http://bit.ly/LowCarbsReceitas">Vou Aproveitar!</a>
+          <script>
+            function thanks() {
+              setTimeout(function () {
+                document.location = "http://bit.ly/LowCarbsReceitas";
+              }, 200);
+            }
+          </script>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" onclick="thanks()"  
+          target="_blank"
+          href="https://s3-sa-east-1.amazonaws.com/srbarriguinhasaudavel/15+Receitas+Low+Carb+Gratis.pdf">Eu Quero!</a>
         </div>
       </div>
     </header>
