--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
       <div class="container">
         <div class="divBG"></div>
         <div class="intro-text">
-          <div class="intro-heading text-uppercase">Emagreça de forma natural, rápida e sem restrições!</div>
+          <div class="intro-heading text-uppercase">Emagreça de forma Saudavel com 100 receitas Low Carb</div>
           <div class="intro-lead-in">O Cardápio Low-Carb é um guia alimentar completo elaborado de acordo com os preceitos da famosa e eficaz Dieta Low-Carb.
           </div>
-          <div class="intro-lead-in">Clique no botão abaixo e receba uma prévia, totalmente grátis, com 15 receitas low carb, e aproveite também nosso desconto
-            de 50% no nosso cardápio com 100 receitas low carb. Alem disso, você vai receber também 3 bônus e um super bônus que vai multiplicar os seus resultados com a dieta
-             Low carb.
+          <div class="intro-lead-in">Clique no botão abaixo e receba uma prévia, totalmente grátis, com 15 receitas low carb, e conheça também um pouco mais sobre 
+            nosso Ebook.
          </div>
           <script>
             function thanks() {
